Target latest lcov on Mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ if(COVERAGE)
     separate_arguments(COVERAGE_BRANCHES)
     set(COVERAGE_WARNINGS "--ignore-errors gcov")
     if(APPLE)
+        set(COVERAGE_BRANCHES "--rc branch_coverage=0")
         set(COVERAGE_WARNINGS "--ignore-errors gcov --ignore-errors inconsistent --ignore-errors unused")
     endif()
     separate_arguments(COVERAGE_WARNINGS)
