--- a/.github/workflows/build-coverage.yml
+++ b/.github/workflows/build-coverage.yml
@@ -80,5 +80,5 @@ jobs:
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report-${{ github.workflow }}
+          name: coverage-report-${{ matrix.os }}
           path: build/ninja/coverage/
