--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,11 @@ option(COVERAGE "Enable coverage reporting" OFF)
 
 if(COVERAGE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
-    set(COVERAGE_BRANCHES "--rc branch_coverage=0")
+    set(COVERAGE_BRANCHES "--rc branch_coverage=1")
     set(COVERAGE_WARNINGS "--ignore-errors gcov")
     set(GENHTML_WARNINGS "")
     if(APPLE)
-        set(COVERAGE_WARNINGS "--ignore-errors gcov --ignore-errors inconsistent --ignore-errors unused")
+        set(COVERAGE_WARNINGS "--ignore-errors gcov --ignore-errors inconsistent --ignore-errors unused --ignore-errors range")
         set(GENHTML_WARNINGS "--ignore-errors inconsistent")
     endif()
     separate_arguments(COVERAGE_BRANCHES)
