--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -19,13 +19,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: windows-latest
-            vcpkgCommitId: '5fa0f075ea51f305b627ecd5e050a363707353ff'
+            vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
             cmake_preset: msvc22
           - os: ubuntu-latest
-            vcpkgCommitId: '5fa0f075ea51f305b627ecd5e050a363707353ff'
+            vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
             cmake_preset: ninja
           - os: macos-latest
-            vcpkgCommitId: '5fa0f075ea51f305b627ecd5e050a363707353ff'
+            vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
             cmake_preset: xcode
 
     steps:
@@ -35,7 +35,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake ninja-build libtool autoconf automake lcov
+          sudo apt-get install -y cmake libtool autoconf automake lcov
 
       - name: Install dependencies on Mac
         if: matrix.os == 'macos-latest'
@@ -43,6 +43,10 @@ jobs:
           brew install lcov autoconf automake libtool
 
       - uses: lukka/get-cmake@latest
+        with:
+          cmakeVersion: "~3.28.0"  # <--= optional, use most recent 3.25.x version
+          ninjaVersion: "^1.12.0"  # <--= optional, use most recent 1.x version
+
       - name: Dump the content of $RUNNER_TEMP
         run: find $RUNNER_TEMP
         shell: bash
@@ -57,7 +61,7 @@ jobs:
           # This specifies the location of vcpkg, where it is going to be restored from cache, or create from scratch.
           vcpkgDirectory: '${{ runner.workspace }}/b/vcpkg'
           # The Git commit id of vcpkg to be checked out. This is only needed because we are not using a submodule.
-          vcpkgGitCommitId: '${{ matrix.vcpkgCommitId}}'
+          vcpkgGitCommitId: '${{ matrix.vcpkgCommitId}}x'
           # The vcpkg.json file, which will be part of cache key computation.
           vcpkgJsonGlob: 'vcpkg.json'
 
