--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -31,6 +31,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set VCPKG_ROOT
+        run: echo "VCPKG_ROOT=${{ env.VCPKG_INSTALLATION_ROOT }}" >> $GITHUB_ENV
+
       - name: Install dependencies on Ubuntu
         if: matrix.os == 'ubuntu-latest'
         run: |
