Setting vcpkg variable self

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -72,6 +72,8 @@ jobs:
       #   run: echo "root='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_DEFAULT_TRIPLET_OUT }}'"
 
       - name: Configure CMake
+        env:
+          VCPKG_ROOT: ${{ env.VCPKG_INSTALLATION_ROOT }}
         run: |
           cmake --preset ${{ matrix.cmake_preset }}
 
