--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -32,7 +32,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set VCPKG_ROOT
-        run: echo "VCPKG_ROOT=${{ env.VCPKG_INSTALLATION_ROOT }}" >> $GITHUB_ENV
+        shell: bash
+        run: echo "VCPKG_ROOT=${VCPKG_INSTALLATION_ROOT}" >> $GITHUB_ENV
+        if: runner.os != 'Windows'
+      - name: Set VCPKG_ROOT (Windows)
+        shell: pwsh
+        run: echo "VCPKG_ROOT=$(echo $env:VCPKG_INSTALLATION_ROOT)" | Out-File -Append -Encoding utf8 -FilePath $env:GITHUB_ENV
+        if: runner.os == 'Windows'
 
       - name: Install dependencies on Ubuntu
         if: matrix.os == 'ubuntu-latest'
@@ -72,8 +78,6 @@ jobs:
       #   run: echo "root='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_DEFAULT_TRIPLET_OUT }}'"
 
       - name: Configure CMake
-        env:
-          VCPKG_ROOT: ${{ env.VCPKG_INSTALLATION_ROOT }}
         run: |
           cmake --preset ${{ matrix.cmake_preset }}
 
