--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -21,6 +21,7 @@ jobs:
           - os: windows-latest
             vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
             cmake_preset: msvc22
+            extra_args: -D ZQ_WITH_PROTO=OFF
           - os: ubuntu-latest
             vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
             cmake_preset: ninja
@@ -70,11 +71,11 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake --preset ${{ matrix.cmake_preset }}
+          cmake --preset ${{ matrix.cmake_preset }}  ${{ matrix.extra_args }}
 
       - name: Build
         run: |
-          cmake --build --preset ${{ matrix.cmake_preset }}
+          cmake --build --preset ${{ matrix.cmake_preset }} --verbose
 
       - name: Test
         run: |
