--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  VCPKG_COMMIT_ID: 'ad25766aefb5313b6bc4e2a4b78a2946f84fbf66'
+
 jobs:
   job:
     name: ${{ matrix.os }}-${{ github.workflow }}
@@ -19,7 +22,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: windows-latest
-            vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
+            vcpkgCommitId: 'ad25766aefb5313b6bc4e2a4b78a2946f84fbf66'
             cmake_preset: msvc22
             extra_args: -D ZQ_WITH_PROTO=ON
             # there was this odd error that could not be reproduced locally on Windos 10 or 11
@@ -28,10 +31,10 @@ jobs:
             # error MSB8066
             # need to look into it extra ,but for now, disable proto on Windows
           - os: ubuntu-latest
-            vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
+            vcpkgCommitId: 'ad25766aefb5313b6bc4e2a4b78a2946f84fbf66'
             cmake_preset: ninja
           - os: macos-latest
-            vcpkgCommitId: '6e31ee33cc9fc93599c4ceb38e229098cf339bb7'
+            vcpkgCommitId: 'ad25766aefb5313b6bc4e2a4b78a2946f84fbf66'
             cmake_preset: xcode
 
     steps:
@@ -67,7 +70,7 @@ jobs:
           # This specifies the location of vcpkg, where it is going to be restored from cache, or create from scratch.
           vcpkgDirectory: '${{ runner.workspace }}/b/vcpkg'
           # The Git commit id of vcpkg to be checked out. This is only needed because we are not using a submodule.
-          vcpkgGitCommitId: '${{ matrix.vcpkgCommitId}}'
+          vcpkgGitCommitId: '${{ env.VCPKG_COMMIT_ID }}'
           # The vcpkg.json file, which will be part of cache key computation.
           vcpkgJsonGlob: 'vcpkg.json'
 
