--- a/cmake/zqConfig.cmake.in
+++ b/cmake/zqConfig.cmake.in
@@ -2,4 +2,8 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/zqTargets.cmake")
 
+find_dependency(astr)
+find_dependency(Protobuf)
+find_dependency(tl-expected)
+
 check_required_components("zq")
