--- a/cmake/zqConfig.cmake.in
+++ b/cmake/zqConfig.cmake.in
@@ -2,6 +2,7 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/zqTargets.cmake")
 
+include(CMakeFindDependencyMacro)
 find_dependency(astr)
 find_dependency(Protobuf)
 find_dependency(tl-expected)
