Added zmq dependency to cmake config

--- a/cmake/zqConfig.cmake.in
+++ b/cmake/zqConfig.cmake.in
@@ -6,5 +6,6 @@ include(CMakeFindDependencyMacro)
 find_dependency(astr)
 find_dependency(Protobuf)
 find_dependency(tl-expected)
+find_dependency(ZeroMQ)
 
 check_required_components("zq")
