--- a/cmake/zqConfig.cmake.in
+++ b/cmake/zqConfig.cmake.in
@@ -2,4 +2,10 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/zqTargets.cmake")
 
+include(CMakeFindDependencyMacro)
+find_dependency(astr)
+@Protobuf_DEPENDENCY@
+find_dependency(tl-expected)
+find_dependency(ZeroMQ)
+
 check_required_components("zq")
