--- a/.github/workflows/build-coverage.yml
+++ b/.github/workflows/build-coverage.yml
@@ -8,8 +8,8 @@ on:
 #   pull_request:
 #     branches:
 #       - main
-  workflow_dispatch:
-  workflow_call:
+#  workflow_dispatch:
+#  workflow_call:
 
 env:
   VCPKG_COMMIT_ID: 'ad25766aefb5313b6bc4e2a4b78a2946f84fbf66'
