Disable coverage CI

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -82,7 +82,7 @@ jobs:
           ctest --preset ${{ matrix.cmake_preset }} --output-on-failure
 
 
-  coverage:
-    uses: ./.github/workflows/build-coverage.yml
+  # coverage:
+  #   uses: ./.github/workflows/build-coverage.yml
 
 
