--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,18 +19,17 @@ endif()
 
 option(ZQ_WITH_PROTO "Build with protobuf tests" OFF)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
 find_package(astr CONFIG REQUIRED)
 find_package(ZeroMQ CONFIG REQUIRED)
-find_package(tl-expected CONFIG REQUIRED)
-
+find_package(commonCompilerWarnings CONFIG REQUIRED)
 
 list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 if (${ZQ_TEST_PROJECT})
     include(CTest)
-    include(testing)
+    include(lib/testing)
     add_subdirectory(tests)
 endif()
 
@@ -65,7 +64,6 @@ endif()
 target_link_libraries(zq
     INTERFACE
       libzmq
-      tl::expected # until C++23
       a4z::astr
 )
 
